--- a/Lab2/Lab2/styles.css
+++ b/Lab2/Lab2/styles.css
@@ -32,14 +32,17 @@ padding: 0;
 
 #flex-section2 .item1 {
 order: 1;
+font-weight: bold;
 }
 
 #flex-section2 .item2 {
  order: 3;
+ font-weight: bold;
 }
 
 #flex-section2 .item3 {
  order: 2;
+ font-weight: bold;
 }
 
 /* end Flexbox Part 2 */
@@ -60,6 +63,7 @@ flex-direction: column;
 	display: flex;
 	flex-wrap: wrap;
 	margin: 0;
+	font-weight: bold;
 
 }
 
@@ -73,6 +77,7 @@ flex-direction: column;
 	grid-template-columns: repeat(4,1fr);
 	gap: 20px;
 	grid-auto-rows: 100px;
+	font-weight: bold;
 
 }
 
@@ -82,11 +87,27 @@ flex-direction: column;
 /* Grid Part 2 */
 
 #grid-section2 .gridboxblue {
+	background-color: rgba(100, 100, 230, 0.870);
+	grid-column: 2 / 4;
+	grid-row: 1 / 4;
+	z-index: 2;
+	position: relative;
+	font-weight: bold;
 
 }
 
 #grid-section2 .gridboxred {
-
+	background-color: lightcoral;
+	width: 450px;
+    height: 125px;
+    position: absolute;
+    left: 15px;
+    top: 565%;
+	z-index: -1;
+	font-weight: bold;
+	
+	
+	
 }
 
 /* end Grid Part 2 */
@@ -95,23 +116,34 @@ flex-direction: column;
 /* Grid Part 3 */
 
 #grid-section3 .grid {
-
+ display: grid;
+ grid-template-columns: 2fr 1fr;
+ grid-template-rows: 100px 300px 100px;
+ gap: 10px;
 }
 
 #grid-section3 .box1 {
-
+grid-column: 1 / span 2;
+grid-row: 1;
+font-weight: bold;
 }
 
 #grid-section3 .box2 {
-
+	grid-column: 2;
+	grid-row: 2;
+	font-weight: bold;
 }
 
 #grid-section3 .box3 {
-
+	grid-column: 1;
+	grid-row: 2;
+	font-weight: bold;
 }
 
 #grid-section3 .box4 {
-
+	grid-column: 1 / span 2;
+	grid-row: 3;
+	font-weight: bold;
 }
 
 /* end Grid Part 3 */
@@ -125,6 +157,7 @@ flex-direction: column;
 	color: #000;
 	padding: 20px;
 	text-decoration: none;
+	transition: background-color 3s , color 3s;
 
 
 }
@@ -132,6 +165,8 @@ flex-direction: column;
 #transition-section .box a:hover {
 	background-color: #cc0000;
 	color: #fff;
+	transition: background-color 0.5s , color 0.5s;
+
 
 
 }
