--- a/Lab2/Lab2/styles.css
+++ b/Lab2/Lab2/styles.css
@@ -87,23 +87,29 @@ flex-direction: column;
 /* Grid Part 2 */
 
 #grid-section2 .gridboxblue {
-	background-color: rgba(100, 100, 230, 0.870);
+	/* background-color: rgba(100, 100, 230, 0.870); */
 	grid-column: 2 / 4;
 	grid-row: 1 / 4;
-	z-index: 2;
-	position: relative;
+	order: 1;
 	font-weight: bold;
+	/*z-index: 2;
+	position: relative;
+	font-weight: bold;*/
 
 }
 
 #grid-section2 .gridboxred {
-	background-color: lightcoral;
+	grid-column: 1 / 3;
+	grid-row: 2 ;
+	
+	/* background-color: lightcoral; 
 	width: 450px;
     height: 125px;
     position: absolute;
     left: 15px;
     top: 565%;
-	z-index: -1;
+	z-index: -1;*/
+	
 	font-weight: bold;
 	
 	
