--- a/Lab4/styles.css
+++ b/Lab4/styles.css
@@ -1,4 +1,4 @@
-
+/* 
 body, h1, h2, ul, li {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -84,4 +84,96 @@ li {
   
 
 
-   
+    */
+
+
+    body, h1, h2, ul, li {
+        font-family: 'Arial', sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+    
+    header {
+        background-color: #333;
+        color: white;
+        text-align: center;
+        padding: 20px 0;
+    }
+    
+    main {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 20px;
+        max-width: 800px;
+        margin: 20px auto;
+        padding: 0 20px;
+    }
+    
+    .search-options {
+        font-family: 'Arial', sans-serif;
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
+        align-items: center; 
+        margin-bottom: 20px;
+        margin-bottom: 20px;
+    }
+    
+    label {
+        display: block;
+        margin-bottom: 10px;
+        margin-bottom: 10px;
+    }
+    
+    input[type="text"],
+    input[type="button"],
+    button {
+        padding: 10px;
+        margin-bottom: 10px;
+        white-space: nowrap;
+    }
+    
+    .dashboard, .dashboard2 {
+        background-color: #ecf0f1;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        margin-bottom: 20px;
+        line-height: 2rem;
+        float: left;
+        width: 100%; /* Adjust the width as needed */
+        box-sizing: border-box;
+    }
+    body {
+        background:  linear-gradient(159deg,#c32b60 0%,#5a89b8 80%);
+        color: #333;
+    }
+    .errors {
+        padding: 20px 0;
+        color: #e74c3c;
+    }
+    
+    .dashboard h2 {
+        margin-bottom: 15px;
+    }
+    
+    ul {
+        list-style: none;
+        padding: 0;
+    }
+    
+    li {
+        margin-bottom: 10px;
+    }
+    
+    .icon {
+        margin-right: 8px;
+    }
+    
+    @media (max-width: 600px) {
+        .dashboard,
+        .dashboard2 {
+            grid-column: span 2;
+        }
+    }
+    
