--- a/Lab4/styles.css
+++ b/Lab4/styles.css
@@ -46,6 +46,8 @@ button {
     margin-bottom: 20px;
     line-height: 2rem;
     float: left;
+    font-family: Arial, sans-serif;
+    font-size: large
 }
 .dashboard2 {
     background-color: #f5f5f5;
@@ -55,6 +57,8 @@ button {
     margin-bottom: 20px;
     float: right;
     line-height: 2rem;
+    font-family: Arial, sans-serif;
+    font-size: large
 }
 .errors{
     padding: 20px 0;
