--- a/Lab4/styles.css
+++ b/Lab4/styles.css
@@ -86,6 +86,8 @@ li {
     text-align: center; 
     padding: 20px 0;  
     color: white; 
+    font-size: large;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 @media (max-width: 600px) {
